Add Phase 1 VAE training progress report (step 1,100)
- Document first successful VAE-only training session
- VAE loss: 0.832 → 0.297 (64.3% improvement)
- RMSprop+momentum outperforms Adam for VAE training
- KL warmup at 22% progress (preventing posterior collapse)
- Checkpoint: 427 MB, 112M params (Compressor 12.6M, Expander 94.1M, Flow 5.4M untrained)

Training artifacts:
- Checkpoint progression gallery (12 images)
- Training graphs (5 metrics visualizations)
- Color saturation analysis (monochrome reconstruction documented)
- Complete download/testing instructions
- Git LFS setup for model checkpoints

Platform: Paperspace A6000 (6-hour session limit)
Configuration: Phase 1 - VAE-only, no GAN, RMSprop, KL warmup 5K steps

--- a/.gitignore
+++ b/.gitignore
@@ -51,3 +51,7 @@ Thumbs.db
 # Model outputs
 outputs/
 checkpoints/
+
+# Allow published model checkpoints in models/checkpoints/
+!models/checkpoints/
+!models/checkpoints/*.safetensors
